# adventofcode

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: aoc-2015.yml  aoc-2016.yml  aoc-2017.yml  aoc-2018.yml  aoc-2019.yml  aoc-2020.yml  aoc-2021.yml  aoc-2022.yml  clippy.yml  fmt.yml  rust.yml  test.yml
2015/: Cargo.toml
2015/day01/: Cargo.toml
2015/day02/: Cargo.toml
2015/day03/: Cargo.toml
2015/day04/: Cargo.toml
2015/day05/: Cargo.toml
2015/day06/: Cargo.toml
2015/day07/: Cargo.toml
2015/day08/: Cargo.toml
2015/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  (+5 more)
2016/: Cargo.toml  output.txt
2017/: Cargo.toml  output.txt
2017/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs  new.txt
2018/: Cargo.toml  output.txt
2019/: Cargo.toml  output.txt
2020/: Cargo.toml  output22.txt
2020/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs
2020/tests/day16/: sample2
2021/: Cargo.toml
2022/: Cargo.toml
2023/: Cargo.toml
(+218 files in other folders)
