[package]
name = "aoc_2017"
version = "0.1.0"
authors = ["nambrosini <nico.ambrosini14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.10.5"
regex = "1.4.2"