[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["nambrosini <nico.ambrosini14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
lazy_static = "1.4.0"
regex = "1.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
evalexpr = "5.0.5"